Update SCConfig.java